--- a/youngDa/ch01_컴퓨터구조시작하기.md
+++ b/youngDa/ch01_컴퓨터구조시작하기.md
@@ -31,8 +31,28 @@
 ### 컴퓨터의 네 가지 핵심 부품
 
 - CPU
+  - 산술논리연산장치(ALU) : 일종의 계산기. 컴퓨터 내부의 계산을 수행
+  - 레지스터(Regiser) : CPU내 임시 저장소
+  - 제어장치(CU) : 제어신호(control signal) 내보내고, 명령어를 해석하는 장치. 메모리에 저장된 값 읽고 싶을 때 메모리읽기 제어신호 전송/메모리에 값 저장하고 싶을 때 메모리 제어 신호 전송
 - 메모리(RAM/ROM)
-- 보조키억장치
+  - 현재 실행되는 프로그램의 명령어와 데이터를 저장하는 부품
+  - 빠르게 동작하기 위해 주소를 사용
+- 보조기억장치
+  - 메모리의 두 가지 약점
+    - 비싸다
+    - 휘발성(전원이 꺼지면 내용을 잃음)
+  - 메모리보다 크고, 전원이 꺼져도 내용 잃지 않는 메모리
 - 입출력장치
+  - 마이크, 스피커, 키보드, 프린터, 마우스 등 컴퓨터 외부에서 컴퓨터 내부와 정보를 교환하는 장치
+
+그 외
+- 메인보드
+  - 컴퓨터 부품 부착 단자
+- 시스템버스
+  - 메인보드 부품들 간 정보 주고받는 통로
+  - 주소버스(address bus) : 주소를 주고받는 통로
+  - 데이터버스(data bus) : 명령어와 데이터를 주고받는 통로
+  - 제어버스(control bus) : 제어신호 주고받는 통로
 
 ## 읽고 느낀점
+- 여기서 멈추지 말자...
