--- a/youngDa/ch06_메모리와캐시메모리.md
+++ b/youngDa/ch06_메모리와캐시메모리.md
@@ -100,3 +100,5 @@ CPU와 메모리간 상호작용을 위해서는 물리주소와 논리주소간
 
 # 논의할 주제
 개발적인 측면에서 캐시히트를 높힐 수 있는 방법이 있을까요?
+- SPRING에서는 어노테이션 기반 캐싱을 함 -> 상황에 따라서 어노테이션 선택해서 캐싱할 수 있다.
+- CDN : url 이용해서 기능 가져오는 것 -> 캐싱을 이용해서 가져온다. DB캐싱해서 읽어오는 속도를 높힌다
