--- a/youngDa/ch07_보조기억장치.md
+++ b/youngDa/ch07_보조기억장치.md
@@ -77,4 +77,7 @@ RAID 6
 
 # 논의할 내용
 - 탐색시간과 회전지연 시간을 줄이는 방법
+  - HDD 대신 SSD 사용해서 회전 지연시간을 줄임 (탐색시간 빠름) -> SSD 비용 vs 사람 비용
 - 어떤 서비스에 어떤 RAID를 도입해야 하는지 고민
+  - RAID 5,6 : 대용량 저장소 필요로 하는 서비스에서. 어느 정도의 데이터 안정성을 보장하기 때문에 대용량 저장소에 적합.
+  - 데이터 안정성이 중요할 때 : RAID 1, RAID 10
