--- a/youngDa/ch13_교착상태.md
+++ b/youngDa/ch13_교착상태.md
@@ -71,8 +71,29 @@
 
 ### 교착 상태 회피
 
+교착상태가 발생하지 않을 정도로만 자원을 할당하는 방식.
+
+- 안전 상태 (safe state) : 프로세스가 정상적으로 자원 할당받고 종료될 수 있는 상태
+  - 안전 순서열대로 프로세스들에 자원 배분하여 =교착 상태가 발생하지 않는 상태
+- 불안전 상태(unsafe state) : 교착 상태가 발생 할 수도 있는 상태
+
+  - 안전 순셔열이 없는 상황
+
+- 안전 순서열(safe sequence) : 교착 상태 없이 안전하게 프로세스들에 자원을 할당 할 수 있는 순서
+
 ### 교착 상태 검출 후 회복
+
+- 선점을 통한 회복
+  - 교착 상태가 해결될 때 까지 한 프로세스씩 자원을 몰아주는 방식
+- 프로세스 강제 종료를 통한 회복
+  - 교착 상태에 놓인 프로세스 모두 강제 종료 : 확실하게 교착 상태 해결 가능하지만 작업 내역 잃을 수 있음
+  - 교착 상태 없을 때 까지 한 프로세스씩 강제 종료 : 작업 내역 잃는 프로세스 최대한 줄이지만 교착 상태 없어졌는지 여부 확인하는 과정에서 오버헤드 야기
+- 타조 알고리즘 : 무시
 
 # 내 생각
 
+- 지난 CS 기초 스터디에서도 교착 상태가 나왔는데, 교착 상태를 어떤 방식으로 회피하는지, 검출 후에 회복하는 방식은 어떤 것이 있는지 이번 기회에 제대로 배운 것 같아서 재미있었습니다.
+
 # 논의할 내용
+
+- 어떤 프로세스에 대해서 어떤 교착 상태 해결 방식을 써야 할까요?
