--- a/youngDa/ch14_가상메모리.md
+++ b/youngDa/ch14_가상메모리.md
@@ -49,7 +49,35 @@
 
 ### 페이징 에서의 주소 변환
 
+- 페이징 시스템에서는 모든 논리주소가 기본적으로 페이지 번호(page number), 변위(offset)로 이루어짐
+
+### 페이지 테이블 엔트리(PTE, Page Table Entry)
+
+- 페이지의 각 행을 페이지 테이블 엔트리라 함
+
+PTE에 담긴 중요한 정보
+
+- 유효비트(valid bit) : 해당 페이지에 접근 가능한지
+  - 유효비트가 0인 페이지로 접근할 시 **페이지 폴트** 발생
+- 보호비트(protection bit) : 페이지 보호 기능. 읽기 전용인지, 읽고쓰기 모두 가능한지.
+- 참조비트(reference bit) : CPU가 페이지에 접근한 적 있느지
+- 수정비트(modified bit) : 해당 페이지에 데이터를 쓴 적이 있는지 수정 여부. 더티 비트(dirty bit)라고도 함
+
+## 14-3 페이지 교체와 프레임 할당
+
+### 요구 페이징(demand paging)
+
+프로세스를 메모리에 적재할 때 처음부터 모든 페이지를 적재하지 않고 필요한 페이지만 적재하는 기법
+
+1. CPU가 특정 페이지에 접근한는 명령어를 실행
+2. 해당 페이지가 현재 메모리에 있을 경우(유효비트 1) CPU는 페이지가 적재된 프레임에 접근
+3. 해당 페이지가 현재 메모리에 없을 경우(유효비트 0) 페이지 폴트 발생
+4. 페이지 폴트 처리 루틴은 해당 페이지를 메모리로 적재하고 유효 비트를 1로 설정
+5. 다시 1을 수행
+
 # 내 생각
+
+- 데이터 저장소가 아닌 일반 프로그램에서 어떤 식으로 데이터를 적재하고, 메모리에 접근하는지 알 수 있어 흥미로웠습니다.
 
 # 논의할 내용
 
